--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -2409,9 +2409,6 @@
     <ClInclude Include="..\..\..\sonia\bang\auxiliary.hpp">
       <Filter>sonia.bang</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\functions\extern\size_pattern.hpp">
-      <Filter>sonia.bang\entities\functions\extern</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\entities\prepared_call.hpp">
       <Filter>sonia.bang\entities</Filter>
     </ClInclude>
@@ -2444,6 +2441,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\errors\no_position_argument_error.hpp">
       <Filter>sonia.bang\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\functional\general\deref_pattern.hpp">
+      <Filter>sonia.bang\functional\general</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -2924,9 +2927,6 @@
     <ClCompile Include="..\..\..\sonia\bang\bang_auxiliary.cpp">
       <Filter>sonia.bang</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\sonia\bang\entities\functions\extern\size_pattern.cpp">
-      <Filter>sonia.bang\entities\functions\extern</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\prepared_call.cpp">
       <Filter>sonia.bang\entities</Filter>
     </ClCompile>
@@ -2950,6 +2950,12 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\errors\no_position_argument_error.cpp">
       <Filter>sonia.bang\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\functional\general\deref_pattern.cpp">
+      <Filter>sonia.bang\functional\general</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_size_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
