--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -25,19 +25,73 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/bang/bang.tab.cpp
     ${BUNDLE_HOME}/sonia/bang/bang.yy.cpp
     ${BUNDLE_HOME}/sonia/bang/bang_errors.cpp
+    ${BUNDLE_HOME}/sonia/bang/bang_parser.cpp
     ${BUNDLE_HOME}/sonia/bang/bang_semantic.cpp
     ${BUNDLE_HOME}/sonia/bang/bang_unit.cpp
-    ${BUNDLE_HOME}/sonia/bang/parser.cpp
+    ${BUNDLE_HOME}/sonia/bang/bang_auxiliary.cpp
+    ${BUNDLE_HOME}/sonia/bang/ast/assign_expression_visitor.cpp
+    ${BUNDLE_HOME}/sonia/bang/ast/base_expression_visitor.cpp
+    ${BUNDLE_HOME}/sonia/bang/ast/ct_expression_visitor.cpp
     ${BUNDLE_HOME}/sonia/bang/ast/declaration_visitor.cpp
     ${BUNDLE_HOME}/sonia/bang/ast/expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/forward_declaration_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/lvalue_expression_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/casts/expression_cast_to_array_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/casts/expression_cast_to_vector_visitor.cpp
-    ${BUNDLE_HOME}/sonia/bang/ast/casts/expression_cast_utility.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/enum_entity.cpp
-    ${BUNDLE_HOME}/sonia/bang/entities/functional_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/ast/fn_compiler_context.cpp
+    ${BUNDLE_HOME}/sonia/bang/ast/functional_declaration_visitor.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functional.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/prepared_call.cpp
     ${BUNDLE_HOME}/sonia/bang/entities/type_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/variable_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/collections/array_elements_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/collections/array_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/ellipsis/ellipsis_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/enum/enum_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/enum/enum_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functions/create_identifier_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functions/expression_resolver.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functions/expression_resolver.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functions/function_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/functions/extern/to_string_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/literals/numeric_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_argument_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_bit_and_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_empty_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_head_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_tail_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/metaobject/metaobject_typeof_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_entity.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_fn_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_get_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_init_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/struct/struct_new_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_empty_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_get_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_head_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_make_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_set_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_size_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/tuple/tuple_tail_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/union/union_bit_or_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/entities/union/union_implicit_cast_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/basic_fn_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/external_fn_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/signature_matcher.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/value_match_visitor.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/value_type_match_visitor.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/general/deref_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/functional/general/mut_pattern.cpp
+    ${BUNDLE_HOME}/sonia/bang/semantic/semantic_expression_printer.cpp
+
+    ${BUNDLE_HOME}/sonia/bang/errors/assign_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/circular_dependency_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/function_call_match_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/identifier_redefinition_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/no_position_argument_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/pattern_match_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/type_mismatch_error.cpp
+    ${BUNDLE_HOME}/sonia/bang/errors/value_mismatch_error.cpp
+
     ${BUNDLE_HOME}/sonia/bang/library/bang_library.cpp
     ${BUNDLE_HOME}/sonia/bang/vm/bang_vm.cpp
     ${BUNDLE_HOME}/sonia/sal/sal.cpp
